src/components/GamePage/GamePlayComponent/GamePlayComponent.css
.game-play-section {
  width: 90%;
  height: 100%;

  border-radius: 0.375rem;
  position: relative;
}
.coin-btn {
  position: absolute;
  display: grid;
  place-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;

  border-radius: 50%;
  border: 0;
  background-color: transparent;

  padding: 0 !important;
  transition: all 300ms ease;
  cursor: pointer;
  animation: 400ms appear;
}
@keyframes appear {
  from {
    transform: scale(0);
    opacity: 0;
  }
  to {
    transform: scale(1);
    opacity: 1;
  }
}
@keyframes disappear {
  from {
    transform: scale(1);
    opacity: 1;
  }
  to {
    transform: scale(0);
    opacity: 0;
  }
}

@media (min-width: 777px) {
  .game-play-section {
    border: 3px solid var(--clr-neutral-200);
  }
}

.bomb-btn-container {
  position: absolute;
  width: 48px;
  height: 48px;
}
.lost-score-popup {
  position: absolute;
  bottom: 0;
  left: 50%;
  z-index: 10;

  font-weight: var(--fw-bold);
  font-family: var(--ff-primary);
  font-size: var(--fs-500);
  color: var(--clr-primary-900);
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);

  pointer-events: none;
  transform: translate(-50%, 0);
  opacity: 0;
}
.lost-score-popup-animate {
  animation: 1s floatUp ease forwards;
}

@keyframes floatUp {
  from {
    transform: translate(-50%, -10px);
    opacity: 1;
  }
  to {
    transform: translate(-50%, -50px);
    opacity: 0;
  }
}

